--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 </head>
 
 <body>
-<h2>Experimenting AR.js</h2>
-<h3>working platforms: <br>
-1. Desktop Chrome with webcam <br>
-2. iPAD Pro with Safari
-</h3>
-Use <a href="testMarker.png">these testing markers </a>for the following demos 
-<hr>
+<h2>ARHW1</h2>
+<h3>20210314 <br>
+班級: I3B31<br>
+姓名:彭聖貿
+
 Checked with both platforms (rewrite in init-animate form)
 <p>0. <a href="hw1.html">hw1</a></p>
-
+<td width="389">
+	<img border="0" src="ARHW1.gif" width="383" height="217"></td>
+<td width="388">
 </body>
 </html>
