--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 姓名:彭聖貿
 
 Checked with both platforms (rewrite in init-animate form)
-<p>0. <a href="otis0628.github.io/miniARHW/hw1.html">hw1</a></p>
+<p>0. <a href="hw1.html">hw1</a></p>
 <td width="389">
 	<img border="0" src="ARHW1.gif" width="383" height="217"></td>
 <td width="388">
